@startuml
' ERD cho luồng quản lý vật tư tiêu hao
hide circle
left to right direction
skinparam linetype ortho
skinparam shadowing false
skinparam roundcorner 10
skinparam entity {
  BackgroundColor #ffffff
  BorderColor #333333
}

title ERD - Luong Quan Ly Vat Tu Tieu Hao

entity "categories" as categories {
  * id : integer <<PK>>
  --
  * name : varchar_50
  * code_prefix : varchar_10
  * category_kind : varchar_20
  spec_templates : text
  tech_type_id : integer <<FK>>
}

entity "suppliers" as suppliers {
  * id : integer <<PK>>
  --
  * name : varchar_150
  address : varchar_255
  phone_number : varchar_20
}

entity "locations" as locations {
  * id : integer <<PK>>
  --
  * room_name : varchar_100
  area_type_key : varchar_100
  area_type_label : varchar_150
  floor_id : integer <<FK>>
}

entity "users" as users {
  * id : integer <<PK>>
  --
  * username : varchar_50
  * role : varchar_20
  full_name : varchar_100
  email : varchar_150
  phone : varchar_20
  * status : varchar_20
}

entity "assets" as assets {
  * qa_code : varchar_20 <<PK>>
  --
  * name : varchar_100
  * category_id : integer <<FK>>
  * location_id : integer <<FK>>
  * home_location_id : integer <<FK>>
  supplier_id : integer <<FK>>
  * status : varchar_20
  technical_status : varchar_30
  usage_status : varchar_30
  tracking_mode : varchar_20
  quantity_on_hand : integer
  minimum_stock : integer
  unit : varchar_50
  purchase_price : decimal_19_2
  purchase_date : date
  expiration_date : date
}

entity "consumable_receipt_lots" as receipt_lots {
  * id : bigint <<PK>>
  --
  * asset_qa_code : varchar_20 <<FK>>
  lot_code : varchar_100
  * quantity_received : integer
  * quantity_remaining : integer
  * unit_price : decimal_19_2
  * received_date : date
  expiration_date : date
  supplier_id : integer <<FK>>
  received_by_user_id : integer <<FK>>
  * received_at : timestamp
  note : text
}

entity "consumable_issues" as issues {
  * id : bigint <<PK>>
  --
  * asset_qa_code : varchar_20 <<FK>>
  * issued_to_location_id : integer <<FK>>
  * issued_by_user_id : integer <<FK>>
  * quantity : integer
  unit_price : decimal_19_2
  note : text
  * issued_at : timestamp
}

entity "consumable_location_stocks" as location_stocks {
  * id : bigint <<PK>>
  --
  * asset_qa_code : varchar_20 <<FK>>
  * location_id : integer <<FK>>
  * quantity_issued : integer
  * quantity_remaining : integer
  unit_price : decimal_19_2
  last_issued_at : timestamp
  last_updated_by_user_id : integer <<FK>>
  last_updated_at : timestamp
  last_note : text
}

entity "consumable_requests" as requests {
  * id : bigint <<PK>>
  --
  * asset_qa_code : varchar_20 <<FK>>
  * location_id : integer <<FK>>
  * requested_by_user_id : integer <<FK>>
  resolved_by_user_id : integer <<FK>>
  * quantity_requested : integer
  * reason : text
  * status : varchar_30
  decision_note : text
  * created_at : timestamp
  resolved_at : timestamp
}

entity "consumable_disposal_requests" as disposal_requests {
  * id : bigint <<PK>>
  --
  * asset_qa_code : varchar_20 <<FK>>
  * receipt_lot_id : bigint <<FK>>
  * requested_by_user_id : integer <<FK>>
  resolved_by_user_id : integer <<FK>>
  * quantity_requested : integer
  * reason : text
  * status : varchar_30
  decision_note : text
  * created_at : timestamp
  resolved_at : timestamp
}

entity "consumable_disposal_request_items" as disposal_items {
  * id : bigint <<PK>>
  --
  * disposal_request_id : bigint <<FK>>
  * receipt_lot_id : bigint <<FK>>
  * quantity_requested : integer
}

categories ||--o{ assets : "category_id"
suppliers |o--o{ assets : "supplier_id"
locations ||--o{ assets : "location_id"
locations ||--o{ assets : "home_location_id"

assets ||--o{ receipt_lots : "asset_qa_code"
suppliers |o--o{ receipt_lots : "supplier_id"
users |o--o{ receipt_lots : "received_by_user_id"

assets ||--o{ issues : "asset_qa_code"
locations ||--o{ issues : "issued_to_location_id"
users ||--o{ issues : "issued_by_user_id"

assets ||--o{ location_stocks : "asset_qa_code"
locations ||--o{ location_stocks : "location_id"
users |o--o{ location_stocks : "last_updated_by_user_id"

assets ||--o{ requests : "asset_qa_code"
locations ||--o{ requests : "location_id"
users ||--o{ requests : "requested_by_user_id"
users |o--o{ requests : "resolved_by_user_id"

assets ||--o{ disposal_requests : "asset_qa_code"
receipt_lots ||--o{ disposal_requests : "receipt_lot_id"
users ||--o{ disposal_requests : "requested_by_user_id"
users |o--o{ disposal_requests : "resolved_by_user_id"

disposal_requests ||--o{ disposal_items : "disposal_request_id"
receipt_lots ||--o{ disposal_items : "receipt_lot_id"

note bottom of assets
Bang assets dong vai tro master danh muc vat tu.
Trong luong tieu hao, cac ban ghi lien quan den vat tu tieu hao
duoc phan biet bang category/tracking mode theo quy uoc nghiep vu cua he thong.
end note

note bottom of location_stocks
Bang ton kho theo khu vuc.
Du lieu nay duoc cap nhat tu nghiep vu cap phat vat tu cho phong/khu vuc.
end note

note bottom of disposal_requests
Nhanh tieu huy hien tai co 2 muc tham chieu:
- receipt_lot_id o bang yeu cau
- bang disposal_request_items de chi tiet tung lo
ERD giu nguyen theo thiet ke entity hien co.
end note

@enduml
